# bistro1201

./: .gitignore  README.md  docker-compose.yml  fly.toml  nginx.Dockerfile  nginx.conf
.github/workflows/: branch-promotion.yml  checks.yml  ci.yml  deploy-fly-production.yml  deploy-main.yml  deploy-production.yml  e2e-on-develop.yml  enforce-branch-promotion.yml
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: db.rs  docs.rs  email.rs  error.rs  gallery_handlers.rs  handlers.rs  main.rs  models.rs  state.rs  storage.rs
backend/templates/: reservation_cancellation.txt  reservation_confirmation.txt
env/: dev.env  test.env
frontend/: Dockerfile  README.md  babel.config.cjs  index.html  jest.config.cjs  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx  setupTests.js
frontend/src/__tests__/: Home.test.jsx  Scheduling.test.jsx  StaffControlsCard.test.jsx  StaffGallery.test.jsx  StyledDateInput.test.jsx
frontend/src/common/: AppFooter.jsx  AppScrollShell.jsx  BrandWordmark.jsx  FadeInImage.jsx  PageIntro.jsx  PageTransition.jsx  StyledDateInput.jsx  SurfaceCard.jsx  apiClient.js  appConfig.js  navigation.jsx  reserveAccessCookie.js  theme.js  uiStyles.js  useFormErrors.js
frontend/src/pages/about/: About.jsx
frontend/src/pages/gallery/: Gallery.jsx  GalleryEventDetail.jsx  StaffEventsPanel.jsx  StaffGallery.jsx  StaffHomeSlideshow.jsx  galleryAdminApi.js  (+2 more)
frontend/src/test/: accessCodeFixtures.js
frontend/tests/e2e/: README.md  bistro.spec.js
scripts/: run_e2e_in_docker.sh
(+11 files in other folders)
